adding dummy contact info

--- a/index.html
+++ b/index.html
@@ -67,6 +67,28 @@
         <section>
             <div>
                 <h2 id="contact-me">Contact Me</h2>
+                <div>
+                    <ul>
+                        <li>
+                            <a>555.555.5555</a>
+                        </li>
+                        <li>
+                            <a>Work</a>
+                        </li>
+                        <li>
+                            <a>hlry@website.com</a>
+                        </li>
+                        <li>
+                            <a>GitHub</a>
+                        </li>
+                        <li>
+                            <a>Twitter</a>
+                        </li>
+                        <li>
+                            <a>Spotify</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </section>
         <!-- end of content -->
