slight updates to html files

--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
         <section>
             <div>
                 <h2 id="work">Work</h2>
+                <!-- sample past projects -->
+                <div>
+                    <!-- sample project 1 -->
+                </div>
             </div>
         </section>
         <!-- contact me -->
@@ -73,13 +77,10 @@
                             <a>555.555.5555</a>
                         </li>
                         <li>
-                            <a>Work</a>
-                        </li>
-                        <li>
                             <a>hlry@website.com</a>
                         </li>
                         <li>
-                            <a>GitHub</a>
+                            <a href="https://github.com/hlry">GitHub</a>
                         </li>
                         <li>
                             <a>Twitter</a>
