--- a/resume.html
+++ b/resume.html
@@ -6,3 +6,9 @@
     <title>HLRY Resume</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
+<body>
+    <p>
+        You've reached the future location of HLRY's resume.
+    </p>
+</body>
