initial css and background image

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HLRY Professional Portfolio</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
@@ -11,7 +12,7 @@
     <!-- navigation links -->
     <div class="header">
         <!-- developer name -->
-        <h1>HLRY</h1>
+        <h1>Developer: HLRY</h1>
         <!-- navigation links -->
         <nav>
             <ul>
@@ -32,7 +33,11 @@
     </div>
     <!-- hero -->
     <div>
-        <section class="hero"></section>
+        <section class="hero">
+            <div>
+                <h3 class="catchphrase">Connect for your website needs!</h3>
+            </div>
+        </section>
     </div>
     <!-- main body content -->
     <div>
