updates to html and css

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <body>
     <!-- navigation links -->
-    <div class="header">
+    <header>
         <!-- developer name -->
-        <h1>Developer: HLRY</h1>
+        <h1>Hilary</h1>
         <!-- navigation links -->
         <nav>
             <ul>
@@ -30,17 +30,15 @@
                 </li>
             </ul>
         </nav>
-    </div>
+    </header>
     <!-- hero -->
-    <div>
-        <section class="hero">
-            <div>
-                <h3 class="catchphrase">Connect for your website needs!</h3>
-            </div>
-        </section>
-    </div>
+    <section class="hero">
+        <div>
+            <h3>Connect for your website needs!</h3>
+        </div>
+    </section>
     <!-- main body content -->
-    <div>
+    <div class="main-body">
         <!-- about me -->
         <section>
             <div>
@@ -53,7 +51,7 @@
                     subway tile, yr flannel meggings trust fund 90's iPhone. PBR&B vegan raw denim, 3 wolf moon
                     wayfarers cold-pressed pug gochujang tumeric tumblr flannel cardigan live-edge microdosing
                     gastropub. Trust fund lomo fingerstache taxidermy tacos palo santo shabby chic hoodie. Activated
-                    charcoal heirloom four loko stumptown, gluten-free fixie gochujang affogato.
+                    charcoal heirloom four loko stumptown, gluten-free fixie gochujang affogato. <br /><br />
 
                     Succulents offal chia etsy squid ramps 3 wolf moon godard. Literally kickstarter four loko locavore
                     flexitarian plaid snackwave hoodie yuccie man braid. Whatever migas VHS fanny pack pop-up activated
@@ -73,7 +71,7 @@
             </div>
         </section>
         <!-- contact me -->
-        <section>
+        <section class="contact">
             <div>
                 <h2 id="contact-me">Contact Me</h2>
                 <div>
@@ -88,10 +86,10 @@
                             <a href="https://github.com/hlry">GitHub</a>
                         </li>
                         <li>
-                            <a>Twitter</a>
+                            <a href="https://twitter.com/historiaster">Twitter</a>
                         </li>
                         <li>
-                            <a>Spotify</a>
+                            <a href="https://spotify.github.io/">Spotify</a>
                         </li>
                     </ul>
                 </div>
