add flexboxes to past projects

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="main-body">
         <!-- about me -->
         <section>
-            <div>
+            <div class="flex-row">
                 <h2 id="about-me">About Me</h2>
                 <p>
                     Drinking vinegar trust fund prism kogi actually blue bottle, ramps seitan aesthetic dreamcatcher
@@ -62,19 +62,52 @@
         </section>
         <!-- work -->
         <section>
-            <div>
+            <div class="flex-row">
                 <h2 id="work">Work</h2>
                 <!-- sample past projects -->
-                <div>
-                    <!-- sample project 1 -->
+                <div class="pastprojects">
+                    <div class="project-img">
+                        <img src="./assets/images/Run-Buddy.png" alt="" />
+                    </div>
+                    <div class="project-img">
+                        <img src="./assets/images/horiseon.png" alt="" />
+                    </div>
+                    <div class="project-img">
+                        <img src="./assets/images/robot-gladiators.png" alt="" />
+                    </div>
+                    <div class="project-img">
+                        <img src="./assets/images/taskinator.jpg" alt="" />
+                    </div>
+                    <div class="project-img">
+                        <img src="./assets/images/password-generator.png" alt="" />
+                    </div>
                 </div>
+                <!-- <div class="pastworks">
+                    <ul>
+                        <li>
+                            <a href="https://hlry.github.io/run-buddy/">Run Buddy</a>
+                        </li>
+                        <li>
+                            <a href="https://hlry.github.io/horiseon/">Horiseon</a>
+                        </li>
+                        <li>
+                            <a href="https://hlry.github.io/robot-gladiators/">Robot Gladiators</a>
+                        </li>
+                        <li>
+                            <a href="https://hlry.github.io/taskinator/">Taskinator</a>
+                        </li>
+                        <li>
+                            <a href="https://hlry.github.io/password-generator/">Password Generator</a>
+                        </li>
+                    </ul>
+                </div> -->
             </div>
         </section>
         <!-- contact me -->
         <section class="contact">
-            <div>
+            <div class="flex-row">
                 <h2 id="contact-me">Contact Me</h2>
-                <div>
+                <div class="contact-box">
                     <ul>
                         <li>
                             <a>555.555.5555</a>
