setting up grid for past projects and updating formatting

--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,15 @@
 </head>
 
 <body>
-    <p>
-        You've reached the future location of HLRY's resume.
-    </p>
+    <!-- HEADER -->
+    <header>
+        <h1>Resume</h1>
+    </header>
+    <!-- hero -->
+    <section class="hero"></section>
+    <div class="main-body">
+        <p>
+            You've reached the future location of HLRY's resume.
+        </p>
+    </div>
 </body>
