--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <section>
             <div class="flex-row">
                 <h2 id="about-me">About Me</h2>
-                <p>
+                <p class=" left-margin-line">
                     Drinking vinegar trust fund prism kogi actually blue bottle, ramps seitan aesthetic dreamcatcher
                     church-key live-edge hot chicken. Drinking vinegar beard master cleanse, poke man braid blog
                     fingerstache food truck hoodie hot chicken snackwave asymmetrical banh mi lo-fi cloud bread. Kitsch
@@ -60,54 +60,51 @@
                 </p>
             </div>
         </section>
-        <!-- work -->
+        <!-- sample past projects -->
         <section>
             <div class="flex-row">
                 <h2 id="work">Work</h2>
-                <!-- sample past projects -->
-                <div class="pastprojects">
-                    <div class="project-img">
-                        <img src="./assets/images/Run-Buddy.png" alt="" />
+                <div class="projects-grid-container left-margin-line">
+                    <!-- Run Buddy -->
+                    <div id="run-buddy">
+                        <a href="https://hlry.github.io/run-buddy/">
+                            <div class="project-name">Run Buddy</div>
+                        </a>
                     </div>
-                    <div class="project-img">
-                        <img src="./assets/images/horiseon.png" alt="" />
-                    </div>
-                    <div class="project-img">
-                        <img src="./assets/images/robot-gladiators.png" alt="" />
-                    </div>
-                    <div class="project-img">
-                        <img src="./assets/images/taskinator.jpg" alt="" />
-                    </div>
-                    <div class="project-img">
-                        <img src="./assets/images/password-generator.png" alt="" />
-                    </div>
+                    <!-- Horiseon -->
+                    <a href="https://hlry.github.io/horiseon/">
+                        <div class="project-grid-item" id="horiseon">
+                            <div class="project-name">Horiseon</div>
+                        </div>
+                    </a>
+                    <!-- Robot Gladiators -->
+                    <a href="https://hlry.github.io/robot-gladiators/">
+                        <div class="project-grid-item" id="robot-gladiator">
+                            <div class="project-name">Robot
+                                Gladiators</div>
+                        </div>
+                    </a>
+                    <!-- Taskinator -->
+                    <a href="https://hlry.github.io/taskinator/">
+                        <div class="project-grid-item" id="taskinator">
+                            <div class="project-name">Taskinator</div>
+                        </div>
+                    </a>
+                    <!-- Password Generator -->
+                    <a href="https://hlry.github.io/password-generator/">
+                        <div class="project-grid-item" id="pw-generator">
+                            <div class="project-name">Password
+                                Generator</div>
+                        </div>
+                    </a>
                 </div>
-                <!-- <div class="pastworks">
-                    <ul>
-                        <li>
-                            <a href="https://hlry.github.io/run-buddy/">Run Buddy</a>
-                        </li>
-                        <li>
-                            <a href="https://hlry.github.io/horiseon/">Horiseon</a>
-                        </li>
-                        <li>
-                            <a href="https://hlry.github.io/robot-gladiators/">Robot Gladiators</a>
-                        </li>
-                        <li>
-                            <a href="https://hlry.github.io/taskinator/">Taskinator</a>
-                        </li>
-                        <li>
-                            <a href="https://hlry.github.io/password-generator/">Password Generator</a>
-                        </li>
-                    </ul>
-                </div> -->
             </div>
         </section>
         <!-- contact me -->
         <section class="contact">
             <div class="flex-row">
                 <h2 id="contact-me">Contact Me</h2>
-                <div class="contact-box">
+                <div class="contact-box  left-margin-line">
                     <ul>
                         <li>
                             <a>555.555.5555</a>
