update link to password generator project

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         </div>
                     </a>
                     <!-- Password Generator -->
-                    <a href="https://hlry.github.io/password-generator/">
+                    <a href="https://hlry.github.io/friendly-parakeet/">
                         <div class="project-grid-item" id="pw-generator">
                             <div class="project-name">Password
                                 Generator</div>
