adding california park planner project

--- a/index.html
+++ b/index.html
@@ -97,6 +97,12 @@
                                 Generator</div>
                         </div>
                     </a>
+                    <!-- California Park Planner -->
+                    <a href="https://hlry.github.io/california-camping-planner/">
+                        <div class="project-grid-item" id="cal-parks">
+                            <div class="project-name">California Parks Planner</div>
+                        </div>
+                    </a>
                 </div>
             </div>
         </section>
