adding new project

--- a/index.html
+++ b/index.html
@@ -103,6 +103,12 @@
                             <div class="project-name">California Parks Planner</div>
                         </div>
                     </a>
+                    <!-- Pets R Us -->
+                    <a href="https://polar-lowlands-05168.herokuapp.com/">
+                        <div class="project-grid-item" id="pet-adopter">
+                            <div class="project-name">Pets R Us - Pet Adopter</div>
+                        </div>
+                    </a>
                 </div>
             </div>
         </section>
