updating background image for pet adopter

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <!-- Pets R Us -->
                     <a href="https://polar-lowlands-05168.herokuapp.com/">
                         <div class="project-grid-item" id="pet-adopter">
-                            <div class="project-name">Pets R Us - Pet Adopter</div>
+                            <div class="project-name">Pets R Us</div>
                         </div>
                     </a>
                 </div>
